2009-05-31  David Sedeño <david@alderia.com>

	* src/main.c, src/gwget-application-service.xml: Add OpenURIDest call to 
	Dbus so that OpenURI doesn't break external programs that use Dbus API. 
	Fix: #583929
  
2009-02-18  David Sedeño <david@alderia.com>

	* configure.ac: Fix typo for epiphany version 2.26 (Götz Waschk).
	* data/gwget.desktop.in.in: Fix icon and category. Fix bug #572280.
	Thanks to  Götz Waschk.

2009-02-17  David Sedeño <david@alderia.com>

	* configure.ac: Version 1.0.1
	* NEWS: news for 1.0.1

2009-02-15  David Sedeño <david@alderia.com>
	
	* src/gwget_data.h: don't make gwget_pref be extern (fix the epiphany
	extension)
	* epiphany-extension/ephy-gwget-extension.c: Send the destination dir
	var in the call to gwget.
	* epiphany-extension/gwget.xml.in.in: Set author and url.
	* epiphany-extension/Makefile.am: Include @GNOME_CFLAGS@ 
	to INCLUDE_CFLAGS so it can find libgnomeui.h. Fix bug #571790.
	* configure.ac: Detects Epiphany > 2.18. Patch from 
	Christoph Wickert. Fix bug #571789.
	* Changelog: Convert to UTF-8

2009-02-12  David Sedeño <david@alderia.com>

	* NEWS: news for 1.00
	* configure.ac: Bump version to 1.00
	* configure.ac: Require gio and not gnome-vfs.
	* src/gwget_data.c, src/main_window.c, src/main_window_cb.c, 
	src/main.c: Port to gio for local operations.

2009-02-08  David Sedeño <david@alderia.com>

	* data/gwget.glade: Set url label ellipsize to FINAL.

2009-02-07  David Sedeño <david@alderia.com>

	* src/gwget-application{.c, .h}, src/gwget-application-service.xml,
	  main.c: Add destination directory parameter to OpenURI method. 
	  Fixes: #562993
	
2009-02-06  David Sedeño <david@alderia.com>

	* data/gwget.glade: Set Radiobuttons in recursive window in a group.
	Fix bug #533152.
	* data/preferences.glade: Fix GtkSpinButton Adjustment.

2009-02-06  David Sedeño <david@alderia.com>

	Patch from Michael Fotsch <foetsch@yahoo.com> with: 
	* src/gwget_data.c: Support of mp3 playlist: When gwget finishes 