@@ -17,7 +17,7 @@
     </method>
 
     <method name="OpenURIDest">
-      <annotation name="org.freedesktop.DBus.GLib.CSymbol" value="gwget_application_open_uri"/>
+      <annotation name="org.freedesktop.DBus.GLib.CSymbol" value="gwget_application_open_uri_with_dest"/>
       <arg type="s" name="uri" direction="in"/>
       <arg type="s" name="destination_dir" direction="in"/>
       <arg type="u" name="timestamp" direction="in"/>
